--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
 rvm:
   - 1.9.3
   - jruby-19mode
-  - rbx-19mode
+  - rbx-2.1.1
   - 2.0.0
 matrix:
   allow_failures:
     - rvm: jruby-19mode
-    - rvm: rbx-19mode
+    - rvm: rbx-2.1.1
     - rvm: 2.0.0
